# LumEngine

./: .gitignore  CMEngine.sln  CMScripting.csproj  CMakeLists.txt  CMakeUserPresets.json  Class1.cs  LICENSE  Makefile  README.md  install_deps.ps1  main.cpp
.github/: FUNDING.yml
App/: AppWin.cpp  AppWin.h  MainWindow.cpp  MainWindow.h
CS/: Program.cs
ClassWrapper/: ClassWrapper.vcxproj
ClassWrapper/ClassWrapper/: ClassWrapper.sln  ClassWrapper.vcxproj  Transformations.cpp  Transformations.h
ClassWrapper/ClassWrapper/Debug/: ClassWrapper.assets.cache
ClassWrapper/ClassWrapper/x64/Debug/: ClassWrapper.deps.json
ClassWrapper/Transformations/: Transforms.h
ClassWrapper/x64/Debug/: ClassWrapper.assets.cache
Engine/BaseObject/: PropertyManager.h
Engine/Core/: CMAPICore.h  CMCore.h  hostInitializer.h  scriptingThreading.h
Engine/EventSystem/: CMEventSystem.h  CMEvents.h
Engine/ExampleModels/: Slime_V2.gltf
Engine/GUI/: guibuilder.cpp  guibuilder.h
Engine/GUI/Buttons/: basebutton.cpp  basebutton.h  tabsbutton.cpp  tabsbutton.h  utilsbutton.cpp  utilsbuttons.h
Engine/GUI/Loading/: loadingWindow.h
Engine/GUI/MainWindow/: MainWindow.h  camera.h  colorpicker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderer.h
Engine/GUI/MainWindow/3DVisualizer/: camera.cpp  camera.h  light.h  renderer.cpp  (+2 more)
Engine/GUI/Panels/: panel.cpp  panel.h  properties.cpp
Engine/GUI/Rendering/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  rendererDebugger.h  shader.cpp  shader.h
Engine/GUI/Windows/: mainwindow.cpp  mainwindow.h
Engine/GameBehaviour/: CMGameBehaviour.h  CMTime.h
Engine/GraphicsEngine/: GraphicsEngine.cpp  GraphicsEngine.h
Engine/GraphicsEngine/DeviceContext/: DeviceContext.cpp  DeviceContext.h
Engine/GraphicsEngine/SwapChain/: SwapChain.cpp  SwapChain.h
Engine/LogSystem/: LogSystem.h
Engine/Math/: CMMath.h  Math.h  Transforms.h
Engine/Resources/: res.qrc
Engine/Resources/Shaders/: baseFrag.glsl
Engine/Shaders/: base_frag.glsl  base_vert.glsl  frag.glsl  fragment_shader.glsl  shadow_fragment_shader.glsl  shadow_vertex_shader.glsl  sss_fragment.glsl  sss_vertex.glsl  vertex_shader.glsl
Engine/Types/: CMTypes.h
Engine/WindowingSystem/: Win.cpp  Win.h
GUI/: CMItem.h  CMSlider.h  CMWindow.h  EngineStyle.cpp  EngineStyle.h
GUI/Style/CMButtons/: CMButtons.cpp  CMButtons.h
GUI/Style/CMFrames/: CMFrames.cpp  CMFrames.h
GUI/Style/CMItems/: CMItems.cpp  CMItems.h
GUI/Style/CMLayouts/: CMLayouts.cpp  CMLayouts.h
GUI/Style/CMSliders/: CMSliders.cpp  CMSliders.h
IcyEngine/: .gitignore  IcyEngine.sln  IcyEngine.vcxproj  main.cpp
IcyEngine/Engine/Core/: hostInitializer.h  scriptingThreading.h
IcyEngine/Engine/Math/: Transforms.h
IcyEngine/Engine/Resources/: res.qrc.depends
IcyEngineClasses/: IcyEngineClasses.sln  IcyEngineClasses.vcxproj  Math.h  Transforms.h
IcyEngineClasses/x64/Debug/: IcyEngineClasses.deps.json
IcyEngineWrapper/: IcyEngineWrapper.vcxproj  mainCLR.cpp
IcyEngineWrapper/Math/: Math.h
IcyEngineWrapper/ScriptLoader/: ScriptLoader.h
IcyEngineWrapper/Transforms/: Transforms.h
IcyScripting/: IcyScripting.csproj
IcyScripting/Script/Attributes/: AttributeManager.cs
IcyScripting/Script/Entities/: Entity.cs
IcyScripting/Script/Log/: Log.cs
IcyScripting/Script/Main/: Program.cs
IcyScripting/Script/Properties/: PropertyManager.cs
IcyScripting/Script/ScriptCore/: ScriptCore.cs
IcyScripting/Script/Scripting/: Includes.cs  Scripting.cs
IcyScripting/Script/Timing/: Time.cs
LumEngine/: .gitignore  IcyEngine.qtvscr  LumEngine.sln  LumEngine.vcxproj  LumEngine.vcxproj.filters  main.cpp
LumEngine/Engine/Core/: LumEngineAPI.h  hostInitializer.h  scriptingThreading.h
LumEngine/Engine/GUI/: guibuilder.cpp  guibuilder.h
LumEngine/Engine/Math/: Math.h  Transforms.cpp  Transforms.h
LumEngine/Engine/Resources/: LumScriptLoader.runtimeconfig.json
LumEngineWrapper/: .gitignore  IcyEngineWrapper.qtvscr  LumEngineWrapper.vcxproj  LumEngineWrapper.vcxproj.filters  mainCLR.cpp
LumEngineWrapper/Core/: NativeInterface.cpp  NativeInterface.h
LumEngineWrapper/Entities/: Entity.h
LumEngineWrapper/Entities/Properties/: Properties.h
LumEngineWrapper/GUI/PropertyGroupManager/: PropertyGroupManager.cpp  PropertyGroupManager.h
LumEngineWrapper/Math/: Math.h
LumEngineWrapper/Rendering/: Renderer.h
LumEngineWrapper/Rendering/Meshes/: Mesh.h
LumEngineWrapper/ScriptLoader/: ScriptLoader.h
LumEngineWrapper/Scripting/: GameBehaviour.h
LumEngineWrapper/Transforms/: Transforms.h
LumScriptLoader/: LumScriptLoader.csproj
LumScriptLoader/Main/: Program.cs
LumScriptLoader/ScriptCore/: ScriptCore.cs
LumScripting/: .gitignore  LumScripting.csproj
LumScripting/Script/Attributes/: AttributeManager.cs
LumScripting/Script/Entities/: Entity.cs
LumScripting/Script/Log/: Log.cs
LumScripting/Script/Main/: Program.cs
LumScripting/Script/Properties/: PropertyManager.cs
LumScripting/Script/Scripting/: Includes.cs  Scripting.cs
LumScripting/Script/Timing/: Time.cs
LumTypes/: LumTypes.vcxproj  LumTypes.vcxproj.filters
LumTypes/Core/: NativeInterface.h
LumTypes/Entities/: Entity.h  IEntity.h
LumTypes/Entities/Properties/: Property.h
LumTypes/GameBehaviour/: GameBehaviour.h
LumTypes/LOD/: LOD.cpp  LOD.h
LumTypes/Mathematics/: Math.cpp  Math.h
LumTypes/Physics/: Collisions.cpp  Collisions.h  ICollisions.h  Octree.h
LumTypes/Rendering/Colors/: Color.h
LumTypes/Rendering/Lighting/: Lighting.h
LumTypes/Rendering/Materials/: Materials.h
LumTypes/Rendering/Meshes/: Mesh.cpp  Mesh.h
LumTypes/Rendering/Shaders/: Shader.cpp  Shader.h
LumTypes/Transformations/: Transformations.cpp  Transformations.h
Script/: Program.cs
Script/Attributes/: AttributeManager.cs
Script/Entities/: Entity.cs
Script/ExampleScript/: Example.cs
Script/Log/: Log.cs
Script/Main/: Program.cs
Script/Math/: Math.cs
Script/Properties/: PropertyManager.cs
Script/ScriptCore/: ScriptCore.cs
Script/Scripting/: Includes.cs  Scripting.cs
Script/Timing/: Time.cs
Script/Transformations/: Transformations.cs
(+80 files in other folders)
